--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>sonsoya</title>
+    <title>Thong tin co ban cua Nguyen Hong Son</title>
 </head>
 <body>
+    <a href="index.html">Back Home</a>
+    <a href="galler.html">Detail</a>
+    
     <h1>NguyenHongSon</h1>
+    
 <hr>
+<div class="thongtin">
+    <b>Name :Nguyen Hong Son</b>
+
+
+</div>
+<div class="thongtin">
+    <b>Ngay Sinh :1996</b>
+
+</div>
 </body>
 </html>
