--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <a href="index.html">Back Home</a>
-    <a href="galler.html">Detail</a>
-    
+    <a href="galely.html">Detail</a>
+
     <h1>NguyenHongSon</h1>
     
 <hr>
