--- a/galely.html
+++ b/galely.html
@@ -9,7 +9,7 @@
 <body>
     <div class="menu">
             <a href="index.html">Back Home</a>
-            <a href="galely.html">Detail</a>
+            <a href="galely.html">New</a>
     </div>
     <h1>Detail</h1>
 </body>
