--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <a href="index.html">Back Home</a>
-    <a href="galely.html">Detail</a>
+    <a href="galely.html">New</a>
 
     <h1>NguyenHongSon</h1>
     
 <hr>
 <div class="thongtin">
-    <b>Name :Nguyen Hong Son</b>
+    <b>Ten :Nguyen Hong Son</b>
 
 
 </div>
